[package]
name = "diva-livomo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dival"

[dependencies]
anyhow = "1.0.44"
bincode = "1.3.3"
blake3 = "1.1.0"
clap = "3.0.0-beta.5"
dirs = "4.0.0"
hypothesis = { version = "0.10.2", default-features = false }
log = "0.4.14"
once_cell = "1.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
simplelog = "0.10.2"
sled = "0.34.7"
tokio = { version = "1.12.0", features = ["rt"] }
toml = "0.5.8"

[build-dependencies]
clap = "3.0.0-beta.5"
clap_generate = "3.0.0-beta.5"
