[package]
name = "diva-livomo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dival"

[dependencies]
anyhow = "1.0.56"
bincode = "1.3.3"
blake3 = "1.3.1"
clap = { version = "3.1.10", features = ["derive"] }
dirs = "4.0.0"
gio = "0.15.11"
hypothesis = { git = "https://github.com/laxect/rust-hypothesis.git", branch = "patch", default-features = false }
libsecret = { version = "0.1.4", features = ["v0_20"] }
log = "0.4.16"
once_cell = "1.10.0"
pinentry = "0.5.0"
secrecy = "0.8.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
simplelog = "0.12.0"
sled = "0.34.7"
time = { version = "0.3.9", features = ["formatting"] }
tokio = { version = "1.17.0", features = ["rt"] }
toml = "0.5.9"

[build-dependencies]
clap = { version = "3.1.10", features = ["derive"] }
clap_complete = "3.1.2"
